# youliao

./: README.md
ChatClient/: ChatClient.pro  ChatClient.pro.user.afa0cf9  globaldata.cpp  globaldata.h  main.cpp  modifyinfo.ui  register.ui  resource.qrc  signalforward.cpp  signalforward.h  uploadheadicon.ui  userinformation.ui  yllocalsetting.cpp.autosave  yllocalsetting.h.autosave  yllocalsettings.cpp  yllocalsettings.h
ChatClient/YLAddFriendWidgets/: YLAddFriendWidgets.pri  yladdfriendwidget.cpp  yladdfriendwidget.h  ylconfirmwidget.cpp  ylconfirmwidget.h  ylfriendinfowidget.cpp  ylfriendinfowidget.h  ylgroupwidget.cpp  ylgroupwidget.h  ylvalidategroupwidget.cpp  ylvalidategroupwidget.h  ylvalidatemessagewidget.cpp  ylvalidatemessagewidget.h  ylvalidatewidget.cpp  ylvalidatewidget.h
ChatClient/YLBasicWidget/: YLBasicWidget.pri  ylbasicwidget.cpp  ylbasicwidget.h
ChatClient/YLChatWidget/: YLChatWidget.pri  test.cpp  test.h  ylchatlistwidget.cpp  ylchatlistwidget.h  ylchatwidget.cpp  ylchatwidget.h  ylemoticonwidget.cpp  ylemoticonwidget.h  ylgroupchatwidget.cpp  ylgroupchatwidget.h  ylmessageeditwidget.cpp  ylmessageeditwidget.h  ylmessageview.cpp  ylmessageview.h  ylquickbar.cpp  ylquickbar.h  ylrightpanel.cpp  ylrightpanel.h  ylsinglechatwidget.cpp  ylsinglechatwidget.h  yltransferfiletasklistwidget.cpp  yltransferfiletasklistwidget.h
ChatClient/YLCommonControl/: YLCommonControl.pri  ylbutton.cpp  ylbutton.h  ylgroupiconeditwidget.cpp  ylgroupiconeditwidget.h  ylgroupmemberlistwidget.cpp  ylgroupmemberlistwidget.h  ylgroupnoticewidget.cpp  ylgroupnoticewidget.h  ylheadandstatusframe.cpp  ylheadandstatusframe.h  ylheadframe.cpp  ylheadframe.h  ylimageeditwidget.cpp  (+17 more)
YLServer/BaseUtil/: CMakeLists.txt  main.cpp
YLServer/BaseUtil/log/: log.cpp  log4cxx.properties
YLServer/BaseUtil/network/: BaseConn.cpp  BaseConn.h  BasicSocket.cpp  BasicSocket.h  EventDispatch.cpp  EventDispatch.h  HttpClient.cpp  HttpClient.h  ServerInfo.cpp  ServerInfo.h  netlib.h  test.h  type_define.h
YLServer/BaseUtil/pdu/: BasePdu.cpp  BasePdu.h
YLServer/BaseUtil/pdu/protobuf/: .pb.cc  .pb.h  youliao.base.pb.cc  youliao.base.pb.h  youliao.base.proto  youliao.file.pb.cc  youliao.file.pb.h  youliao.file.proto  youliao.friendlist.pb.cc  youliao.friendlist.pb.h  youliao.friendlist.proto  youliao.group.pb.cc  youliao.group.pb.h  youliao.group.proto  youliao.login.pb.cc  youliao.login.pb.h  youliao.login.proto  youliao.message.pb.cc  youliao.message.pb.h  youliao.message.proto  youliao.server.pb.cc  youliao.server.pb.h  youliao.server.proto  youliao.session.pb.cc  youliao.session.pb.h  youliao.session.proto
YLServer/BaseUtil/thread/: Lock.cpp  Lock.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  task.h  test.h
YLServer/BaseUtil/util/: SimpleBuffer.cpp  SimpleBuffer.h  util.cpp  util.h
YLServer/DBServer/: CMakeCache.txt  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  DBProxyTask.cpp  DBProxyTask.h  HandlerMap.cpp  HandlerMap.h  ProxyConn.cpp  ProxyConn.h  main.cpp
YLServer/DBServer/business/: AudioModel.cpp  AudioModel.h  FriendListModel.cpp  FriendListModel.h  GroupModel.cpp  GroupModel.h  Interface.cpp  Interface.h  Login.cpp  Login.h  LoginModel.cpp  LoginModel.h  MessageModel.cpp  MessageModel.h  OtherModel.cpp  OtherModel.h  SessionModel.cpp  SessionModel.h
YLServer/HttpServer/: CMakeLists.txt  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  header.h  main.cpp  mime_type.cpp  mime_type.h  reply.cpp  reply.h  request.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  server.cpp  server.h
YLServer/LoginServer/: CMakeLists.txt  LoginConn.cpp  LoginConn.h  login_server.cpp
YLServer/MsgServer/: AttachData.cpp  AttachData.h  CMakeLists.txt  ClientConn.cpp  ClientConn.h  DBServConn.cpp  DBServConn.h  FileServerConn.cpp  FileServerConn.h  RouteConn.cpp  RouteConn.h  User.cpp  User.h  msg_server.cpp
YLServer/RouteServer/: CMakeLists.txt  CachePool.cpp  CachePool.h  DBServConn.cpp  DBServConn.h  RouteConn.cpp  RouteConn.h  RouteServer.cbp  libhiredis.so.0.13  main.cpp
build-ChatClient-Desktop_Qt_5_10_1_GCC_64bit-Debug/: 1.db
server/db_proxy/: CMakeLists.txt  DBPool.cpp  DBPool.h  main.cpp
server/loginserver/: CMakeLists.txt  README.md  YLLoginConn.cpp  YLLoginConn.h  main.cpp
untitled1/: untitled1.pro
(+211 files in other folders)
