cmake_minimum_required(VERSION 3.7)
project(BaseUtil)

set(CMAKE_CXX_STANDARD 11)


AUX_SOURCE_DIRECTORY(./ SRC_LIST)
AUX_SOURCE_DIRECTORY(./thread/ SRC_THREAD)
AUX_SOURCE_DIRECTORY(./network/ SRC_NETWORK)
AUX_SOURCE_DIRECTORY(./log SRC_LOG)
AUX_SOURCE_DIRECTORY(./util SRC_UTIL)
set(SOURCE_FILES ${SRC_LIST} ${SRC_THREAD} ${SRC_NETWORK} ${SRC_LOG} ${SRC_UTIL})
add_executable(BaseUtil ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(BaseUtil pthread log4cxx)
