cmake_minimum_required(VERSION 3.7)
project(db_proxy)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES ${SRC_LIST})


SET(MYSQL_INCLUDE_DIR /usr/include/mysql)
SET(MYSQL_LIB /usr/lib64/mysql)

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
        -DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
        -DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11 -DENCRYPT)

INCLUDE_DIRECTORIES(./ ../util ${MYSQL_INCLUDE_DIR})
LINK_DIRECTORIES(./ ../util ${MYSQL_LIB})

add_executable(db_proxy ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(db_proxy mysqlclient util)
